# Xiaomi_Kernel_OpenSource

./: .gitignore  .mailmap  2  52a0416.diff  9bef081.diff  Android.bp  Android.mk  AndroidKernel.mk  Androidbp  BUILD.bazel  CREDITS  CleanSpec.mk  Kconfig  LICENCE  LICENSE  MAINTAINERS  Makefile  NVIDIA-REVIEWERS  OWNERS  README  README.html  README.md  Sweet  abi_gki_aarch64_cuttlefish_whitelist  abi_gki_aarch64_db845c_whitelist  abi_gki_aarch64_exynos_whitelist  abi_gki_aarch64_goldfish_whitelist  abi_gki_aarch64_hikey960  abi_gki_aarch64_hikey960_whitelist  abi_gki_aarch64_qcom  abi_gki_aarch64_qcom_internal_whitelist  abi_gki_aarch64_qcom_whitelist  abi_gki_aarch64_sunxi_whitelist  abi_gki_aarch64_unisoc_whitelist  abi_gki_aarch64_whitelist  abi_gki_qcom_whitelist  android_dm_verity_test.x509  android_dm_verity_test2.x509  aurora.bzl  autogvm.bzl  (+240 more)
audio-kernel/: Android.mk  Makefile  Makefile.am  NOTICE
audio-kernel/asoc/: Android.mk  Kbuild  apq8009-i2s-ext-codec.c  machine_815x_init.c  machine_815x_init.h  msm-audio-effects-q6-v2.c  msm-compress-q6-v2.c  msm-cpe-lsm.c  msm-dai-fe.c  msm-dai-q6-hdmi-v2.c  msm-dai-q6-v2.c  msm-dai-q6-v2.h  msm-dai-slim.c  msm-dai-stub-v2.c  msm-dolby-common.h  msm-ds2-dap-config.c  msm-ds2-dap-config.h  msm-lsm-client.c  msm-pcm-afe-v2.c  msm-pcm-afe-v2.h  msm-pcm-dtmf-v2.c  msm-pcm-host-voice-v2.c  msm-pcm-hostless.c  msm-pcm-loopback-v2.c  msm-pcm-q6-noirq.c  msm-pcm-q6-v2.c  msm-pcm-q6-v2.h  msm-pcm-routing-devdep.c  msm-pcm-routing-devdep.h  msm-pcm-routing-v2.c  msm-pcm-routing-v2.h  msm-pcm-voice-v2.c  msm-pcm-voice-v2.h  msm-pcm-voip-v2.c  msm-qti-pp-config.c  msm-qti-pp-config.h  msm-slim-dma.h  msm-transcode-loopback-q6-v2.c  msm8909.c  msm8952-dai-links.c  (+24 more)
audio-kernel/asoc/codecs/: Android.mk  Kbuild  Kbuild.bk  audio-ext-clk-up.c  audio-ext-clk-up.h  audio-ext-clk.c  audio-ext-clk.h  aw87329_audio.c  aw87519_audio.c  aw87519_audio.h  core.h  cpe_core.h  cpe_err.h  max98937.c  max98937.h  msm-cdc-pinctrl.c  msm-cdc-pinctrl.h  msm-cdc-supply.c  msm-cdc-supply.h  msm_hdmi_codec_rx.c  msm_stub.c  pdata.h  socinfo.h  spk-id.c  spk-id.h  wcd-clsh.c  wcd-clsh.h  wcd-dsp-mgr.c  wcd-dsp-utils.c  wcd-dsp-utils.h  wcd-irq.c  wcd-mbhc-adc.c  wcd-mbhc-adc.h  wcd-mbhc-legacy.c  wcd-mbhc-legacy.h  wcd-mbhc-v2-api.h  wcd-mbhc-v2.c  wcd-mbhc-v2.h  wcd-spi.c  wcd9335-regmap.c  (+33 more)
audio-kernel/config/: msm8909auto.conf  msm8909autoconf.h  qcs405auto.conf  qcs405autoconf.h  sdm450auto.conf  sdm450autoconf.h  sdm670auto.conf  sdm670autoconf.h  sdm710auto.conf  sdm710auto_static.conf  sdm710autoconf.h  sdm845auto.conf  sdm845autoconf.h  sdxpoorwillsauto.conf  sdxpoorwillsautoconf.h  sm6150auto.conf  sm6150autoconf.h  sm8150auto.conf  sm8150autoconf.h  trinketauto.conf  trinketautoconf.h
audio-kernel/dsp/: Android.mk  Kbuild  adsp-loader.c  adsp_err.c  adsp_err.h  apr_elliptic.c  audio_cal_utils.c  audio_calibration.c  audio_notifier.c  audio_pdr.c  audio_pdr.h  audio_slimslave.c  audio_ssr.c  avtimer.c  msm-audio-event-notify.c  msm-cirrus-playback.c  msm-dts-srs-tm-config.c  msm_audio_ion.c  msm_mdf.c  q6_init.c  q6_init.h  q6adm.c  q6afe.c  q6afecal-hwdep.c  q6afecal-hwdep.h  q6asm.c  q6audio-v2.c  q6common.c  q6core.c  q6lsm.c  q6usm.c  q6usm.h  q6voice.c  rtac.c  sp_params.c  usf.c  usfcdev.c  usfcdev.h  voice_mhi.c
audio-kernel/dsp/codecs/: Android.mk  Kbuild  aac_in.c  amrnb_in.c  amrwb_in.c  audio_aac.c  audio_alac.c  audio_amrnb.c  audio_amrwb.c  audio_amrwbplus.c  audio_ape.c  audio_evrc.c  audio_g711alaw.c  audio_g711mlaw.c  audio_hwacc_effects.c  audio_mp3.c  audio_multi_aac.c  audio_native.c  audio_qcelp.c  audio_utils.c  audio_utils.h  audio_utils_aio.c  audio_utils_aio.h  audio_wma.c  audio_wmapro.c  evrc_in.c  g711alaw_in.c  g711mlaw_in.c  q6audio_v2.c  q6audio_v2_aio.c  qcelp_in.c
audio-kernel/dsp/elliptic/: Makefile  elliptic.c  elliptic_mixer_controls.c  elliptic_sysfs.c  elliptic_version.h
audio-kernel/include/asoc/: dbmdx.h  wcd-irq.h  wcd934x_registers.h  wcd9360-registers.h  wcd9xxx_registers.h
audio-kernel/include/dsp/: apr_audio-v2.h  apr_elliptic.h  audio_cal_utils.h  audio_calibration.h  audio_notifier.h  msm-audio-effects-q6-v2.h  msm-audio-event-notify.h  msm-cirrus-playback.h  msm-dts-srs-tm-config.h  msm_audio_ion.h  msm_mdf.h  q6adm-v2.h  q6afe-v2.h  q6asm-v2.h  q6common.h  q6core.h  q6lsm.h  q6voice.h  rtac.h  smart_amp.h  sp_params.h  voice_mhi.h
audio-kernel/include/elliptic/: elliptic_data_io.h  elliptic_device.h  elliptic_mixer_controls.h  elliptic_sysfs.h
audio-kernel/include/ipc/: apr.h  apr_tal.h  apr_us.h
audio-kernel/include/soc/: bg_glink.h  internal.h  snd_event.h  soundwire.h  swr-wcd.h
audio-kernel/include/uapi/: Android.mk
audio-kernel/ipc/: Android.mk  Kbuild  apr.c  apr_dummy.c  apr_tal.c  apr_tal_glink.c  apr_tal_rpmsg.c  apr_v2.c  apr_v3.c  bg_glink.c  wcd-dsp-glink.c
audio-kernel/soc/: Android.mk  Kbuild  core.h  pinctrl-lpi.c  pinctrl-utils.h  pinctrl-wcd.c  regmap-swr.c  snd_event.c  soundwire.c  swr-mstr-ctrl.c  swr-mstr-ctrl.h  swr-wcd-ctrl.c  swr-wcd-ctrl.h  swrm_port_config.h  swrm_registers.h
techpack/audio/: Makefile  Makefile.am  NOTICE
techpack/audio/asoc/: Kbuild  Makefile  apr_elliptic.c  bengal-port-config.h  bengal.c  device_event.h  gvm_auto_spf_dummy.c  holi-port-config.h  holi.c  kona-port-config.h  kona.c  lahaina-port-config.h  lahaina.c  machine_615x_init.c  machine_615x_init.h  machine_815x_init.c  machine_815x_init.h  mdm_dailink.h  msm-audio-effects-q6-v2.c  msm-compress-q6-v2.c  msm-compress-q6-v2.h  msm-cpe-lsm.c  msm-dai-fe.c  msm-dai-q6-hdmi-v2.c  msm-dai-q6-v2.c  msm-dai-q6-v2.h  msm-dai-slim.c  msm-dai-stub-v2.c  msm-dolby-common.h  msm-dolby-dap-config.h  msm-ds2-dap-config.c  msm-ds2-dap-config.h  msm-dts-srs-tm-config.c  msm-elliptic.c  msm-elliptic.h  msm-lsm-client.c  msm-pcm-afe-v2.c  msm-pcm-afe-v2.h  msm-pcm-dtmf-v2.c  msm-pcm-host-voice-v2.c  (+36 more)
techpack/audio/dsp/: Kbuild  (+45 more)
techpack/display-drivers/: Android.bp  Android.mk  Kbuild  Makefile  Makefile.am  NOTICE  display_driver_board.mk  display_driver_product.mk  display_kernel_headers.py
(+89839 files in other folders)
